--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="pageSearching">
-    <div class="z-content-header">
+    <div class="z-main-header">
         <div class="z-page-title flex-row align-items-baseline">
             <h1 th:text="#{notice.label.notice}"></h1>
             <h6 class="description ml-2 pl-2" th:text="#{notice.msg.portalDescription}"></h6>
