--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -354,229 +354,12 @@
 
     /** 하이차트 초기화 */
     function setChart(chartType, property) {
-        ZChart('container', chartType, property);
+        chart = new ZChart('container', chartType, property);
     }
 
     /** chartConfig 파싱 진행 **/
     function parsedPropertyJson(chartConfig, property) {
-        let chartConfigJson = JSON.parse(chartConfig);
-        let propertyJson = JSON.parse(property);
-
-        /** Get propertyJson Data **/
-        let countArray = [];
-        let docKeyList = [];
-        for (let key in propertyJson[0].operation) {
-            // 문서에 대한 카운트 개수
-            countArray.push(propertyJson[0].operation[key].count);
-        }
-        for (let key in propertyJson[1].documentList) {
-            // 문서의 각 나눈 연도의 개수
-            docKeyList.push(key);
-        }
-        const getYear = Number(docKeyList[0].substring(0, 4));
-        const getMonth = Number(docKeyList[0].substring(4, 6));
-        const getDay = Number(docKeyList[0].substring(6, 8));
-        const getHour = Number(docKeyList[0].substring(8, 10));
-
-        // 라인차트, 컬럼차트용
-        let pointInterval = 1; // time
-        let pointIntervalUnit = undefined; //  highcharts 기본값
-        if (typeof chartConfigJson.periodUnit !== 'undefined') {
-            if (chartConfigJson.periodUnit === CHART_YEAR) {
-                pointIntervalUnit = 'year';
-            } else if (chartConfigJson.periodUnit === CHART_MONTH) {
-                pointIntervalUnit = 'month';
-            } else if (chartConfigJson.periodUnit === CHART_DAY) {
-                pointIntervalUnit = 'day';
-            } else {  // time
-                pointInterval = 3600 * 1000;
-            }
-        }
-        // 데이터상 현재 시리즈는 1개만 전달됨
-        const seriesName = i18n.msg('chart.label.doc');
-
-        // 차트 업데이트
-        chart.setTitle({text: propertyJson[0].title});
-
-        let seriesData = [];
-        const categoryData = Object.keys(propertyJson[1].documentList);
-        switch (chartConfigJson.type) {
-            case PIE_CHART:
-                chart.series[0].update({
-                    tooltip: {
-                        pointFormatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                return i18n.msg('chart.label.docRatio') + ': <b>' + Highcharts.numberFormat(this.percentage, 2) + '%</b>';
-                            } else {
-                                return i18n.msg('chart.label.docCases') + ': <b>' + i18n.msg('common.label.count', Highcharts.numberFormat(this.y, 0)) + '</b>';
-                            }
-                        }
-                    },
-                    dataLabels: {
-                        formatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                return '<b>' + this.key + ': <b>' + Highcharts.numberFormat(this.percentage, 2) + '%</b>';
-                            } else {
-                                return '<b>' + this.key + ': <b>' + i18n.msg('common.label.count', Highcharts.numberFormat(this.y, 0)) + '</b>';
-                            }
-                        }
-                    }
-                });
-                for (let i = 0; i < categoryData.length; i++) {
-                    seriesData.push({
-                        name: docKeyList[i],
-                        y: countArray[i],
-                        sliced: (i === 0),
-                        selected: (i === 0)
-                    });
-                }
-                chart.series[0].setData(seriesData, true);
-                break;
-            case BASIC_LINE_CHART:
-                chart.yAxis[0].setTitle({text: i18n.msg('chart.option.label.yAxisTitle')});
-
-                chart.series[0].update({
-                    pointStart: Date.UTC(getYear, getMonth, getDay, getHour), // TODO: UTC 시간을 사용하는게 맞는지 재확인 필요.
-                    pointInterval: pointInterval,
-                    pointIntervalUnit: pointIntervalUnit,
-                    tooltip: {
-                        pointFormatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                const sum = countArray.reduce((a, b) => (a + b));
-                                const percent = (this.y / sum) * 100;
-                                return i18n.msg('chart.label.docRatio') + ': <b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                            } else {
-                                return i18n.msg('chart.label.docCases') + ': <b>' + i18n.msg('common.label.count', Highcharts.numberFormat(this.y, 0)) + '</b>';
-                            }
-                        }
-                    },
-                    dataLabels: {
-                        formatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                const sum = countArray.reduce((a, b) => (a + b));
-                                const percent = (this.y / sum) * 100;
-                                return '<b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                            } else {
-                                return '<b>' + Highcharts.numberFormat(this.y, 0) + '</b>';
-                            }
-                        }
-                    }
-                });
-
-                for (let i = 0; i < categoryData.length; i++) {
-                    const getYear = categoryData[i].substring(0, 4);
-                    const getMonth = categoryData[i].substring(4, 6);
-                    const getDay = categoryData[i].substring(6, 8);
-                    const getHour = categoryData[i].substring(8, 10);
-                    seriesData.push({
-                        name: seriesName,
-                        x: Date.UTC(getYear, getMonth, getDay, getHour),
-                        y: countArray[i]
-                    });
-                }
-                chart.series[0].update({name: seriesName, showInLegend: true}, false);
-                chart.series[0].setData(seriesData, true);
-                break;
-            case STACKED_COLUMN_CHART:
-            case STACKED_BAR_CHART:
-            case LINE_AND_COLUMN_CHART:
-                chart.yAxis[0].setTitle({text: i18n.msg('chart.option.label.yAxisTitle')});
-
-                chart.series[0].update({
-                    pointStart: Date.UTC(getYear, getMonth, getDay, getHour),
-                    pointInterval: pointInterval,
-                    pointIntervalUnit: pointIntervalUnit,
-                    tooltip: {
-                        pointFormatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                const sum = countArray.reduce((a, b) => (a + b));
-                                const percent = (this.y / sum) * 100;
-                                return i18n.msg('chart.label.docRatio') + ': <b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                            } else {
-                                return i18n.msg('chart.label.docCases') + ': <b>' + i18n.msg('common.label.count', Highcharts.numberFormat(this.y, 0)) + '</b>';
-                            }
-                        }
-                    },
-                    dataLabels: {
-                        formatter: function () {
-                            if (chartConfigJson.operation === 'percent') {
-                                const sum = countArray.reduce((a, b) => (a + b));
-                                const percent = (this.y / sum) * 100;
-                                return '<b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                            } else {
-                                return '<b>' + Highcharts.numberFormat(this.y, 0) + '</b>';
-                            }
-                        }
-                    }
-                });
-
-                for (let i = 0; i < categoryData.length; i++) {
-                    const getYear = categoryData[i].substring(0, 4);
-                    const getMonth = categoryData[i].substring(4, 6);
-                    const getDay = categoryData[i].substring(6, 8);
-                    const getHour = categoryData[i].substring(8, 10);
-                    seriesData.push({
-                        name: seriesName,
-                        x: Date.UTC(getYear, getMonth, getDay, getHour),
-                        y: countArray[i]
-                    });
-                }
-                chart.series[0].update({name: seriesName, showInLegend: true}, false);
-                chart.series[0].setData(seriesData, true);
-                if (chartConfigJson.type === LINE_AND_COLUMN_CHART) {
-                    chart.series[1].update({
-                        name: seriesName,
-                        showInLegend: false,
-                        type: 'spline',
-                        pointStart: Date.UTC(getYear, getMonth, getDay, getHour),
-                        pointInterval: pointInterval,
-                        pointIntervalUnit: pointIntervalUnit,
-                        tooltip: {
-                            pointFormatter: function () {
-                                if (chartConfigJson.operation === 'percent') {
-                                    const sum = countArray.reduce((a, b) => (a + b));
-                                    const percent = (this.y / sum) * 100;
-                                    return i18n.msg('chart.label.docRatio') + ': <b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                                } else {
-                                    return i18n.msg('chart.label.docCases') + ': <b>' + i18n.msg('common.label.count', Highcharts.numberFormat(this.y, 0)) + '</b>';
-                                }
-                            }
-                        },
-                        dataLabels: {
-                            formatter: function () {
-                                if (chartConfigJson.operation === 'percent') {
-                                    const sum = countArray.reduce((a, b) => (a + b));
-                                    const percent = (this.y / sum) * 100;
-                                    return '<b>' + Highcharts.numberFormat(percent, 2) + '%</b>';
-                                } else {
-                                    return '<b>' + Highcharts.numberFormat(this.y, 0) + '</b>';
-                                }
-                            }
-                        }
-                    }, false);
-                    chart.series[1].setData(seriesData, true);
-                }
-                break;
-            case ACTIVITY_GAUGE_CHART:
-                let innerRadius = 40;
-                let radius = 50;
-                const sum = countArray.reduce((a, b) => (a + b));
-                for (let k = 0; k < categoryData.length; k++) {
-                    innerRadius = innerRadius + 10;
-                    radius = radius + 10;
-                    chart.series[k].update({
-                        name: categoryData[k],
-                        borderColor: Highcharts.getOptions().colors[k]
-                    }, false);
-                    chart.series[k].setData([{
-                        color: Highcharts.getOptions().colors[k],
-                        radius: radius,
-                        innerRadius: innerRadius,
-                        y: Number(Highcharts.numberFormat((countArray[k] / sum) * 100))
-                    }], true);
-                }
-                break;
-        }
+        chart.parsedPropertyJson(chartConfig, property);
     }
 
     // 화면 필수값 검증
