--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1194,33 +1194,38 @@ table tr {
   height: 2.5rem;
 }
 table tr th {
-  font-size: 1.125rem;
   font-weight: 500;
 }
 table tr td, table tr th {
-  border: 0.0625rem solid transparent;
   display: table-cell;
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   word-wrap: normal;
+  vertical-align: middle;
 }
 
 .z-table {
   width: 100%;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #ABB0B5;
+  border: none;
+  border-collapse: collapse;
 }
-.z-table-head tr {
-  color: #222529;
+.z-table tr {
+  border-bottom: 0.0625rem solid #CFD5D9;
+  border-left: none;
+  border-right: none;
+}
+.z-table tr.z-table-head {
+  height: 2rem;
+  font-weight: 500;
+  text-indent: 1rem;
+  border-top: 0.0625rem solid #CFD5D9;
   border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
-}
-.z-table-body {
-  display: block;
-  overflow-y: auto;
-}
-.z-table-body > td {
-  display: inline-block;
-  vertical-align: middle;
+  background-color: #F5F5F5;
 }
 
 span {
