--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -149,8 +149,9 @@ $label-font-size:                             $font-size-xs;
 $label-font-weight:                           $font-weight-medium;
 
 // table
-$table-th-font-size:                          1.125rem; // 18px
-$table-th-font-weight:                        $font-weight-medium;
+$table-head-font-color:                       $gray400;
+$table-head-font-weight:                      $font-weight-medium;
+$table-head-bg-color:                         $neutral100;
 
 // button, a
 $button-font-family:                          $font-family-s;
