--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -77,8 +77,8 @@
     </div>
     <div class="z-view-row">
         <table class="z-table">
-            <thead class="z-table-head">
-            <tr class="flex-row align-items-center">
+            <thead>
+            <tr class="z-table-head flex-row align-items-center">
                 <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relatedDocument}"></th>
                 <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.createUser}"></th>
                 <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.applyDate}"></th>
@@ -86,7 +86,7 @@
                 <th style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.whetherToInterlink}"></th>
             </tr>
             </thead>
-            <tbody class="z-table-body">
+            <tbody>
             <!--no data-->
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciHistoryList)}">
                 <td style="width: 100%;" colspan="5" class="align-left" th:text="#{common.msg.noData}"></td>
@@ -110,13 +110,13 @@
     </div>
     <div class="z-view-row">
         <table class="z-table">
-            <thead class="z-table-head">
-            <tr class="flex-row align-items-center">
+            <thead>
+            <tr class="z-table-head flex-row align-items-center">
                 <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relationType}"></th>
                 <th style="width: 60%;" class="align-left" th:text="#{cmdb.ci.label.targetCiName}"></th>
             </tr>
             </thead>
-            <tbody class="z-table-body">
+            <tbody>
             <!--no data-->
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciRelationList)}">
                 <td style="width: 100%;" colspan="5" class="align-center" th:text="#{common.msg.noData}"></td>
