--- a/src/main/resources/public/scss/process/_modal.scss
+++ b/src/main/resources/public/scss/process/_modal.scss
@@ -1,9 +1,10 @@
 @import '../template/_modal.scss';
 
 .modal-dialog {
-   // 프로세스 다른이름으로 저장하기 모달
-   &.save-as {
+  // 프로세스 다른이름으로 저장하기 모달
+  &.save-as {
     .modal-content {
+      height: calc(#{$save-as-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
       padding: 0.625rem 1.25rem; // 10px 20px
       @include scrollbarHidden;
 
@@ -13,6 +14,7 @@
       }
       
       .textarea-scroll-wrapper {
+        min-height: 7.5rem; // 120px
         resize: none;
       }
     }
