--- a/src/main/resources/public/scss/process/_variables.scss
+++ b/src/main/resources/public/scss/process/_variables.scss
@@ -144,3 +144,6 @@ $element-tooltip-border-color:                     $gray300;
 $thumbnail-modal-width:                            1040px; // 1040px
 $thumbnail-modal-height:                           48.44rem; // 775px
 $thumbnail-main-padding:                           0.625rem; // 10px
+
+//////////////////////////// 다른이름으로 저장하기 //////////////////////////
+$save-as-modal-height:                             25.63rem; // 410px
