#11106 HighChart 최신 버전으로 업그레이드

--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -35,7 +35,7 @@
         <!-- 차트 대상 태그 -->
         <div class="flex-column col-6 mr-4">
             <label class="field-label required" th:text="#{chart.label.targetTags}"/>
-            <input id="targetTags" name="targetTags" th:value="${chart?.targetTags}"/>
+            <input type="text" id="targetTags" name="targetTags" class="z-input col-pct-12" th:value="${chart?.targetTags}"/>
         </div>
         <!-- 연산 -->
         <div class="flex-column col-6">
