--- a/src/main/resources/public/template/layout/itsm/itsmHead.html
+++ b/src/main/resources/public/template/layout/itsm/itsmHead.html
@@ -28,6 +28,12 @@
 <script th:src="@{/assets/js/lib/zTree.js}"></script>
 <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
 <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
+<script th:src="@{/assets/vendors/highCharts/highcharts.js}"></script>  <!-- 하이차트 lib -->
+<script th:src="@{/assets/vendors/highCharts/highcharts-more.js}"></script> <!-- 하이차트 lib -->
+<script th:src="@{/assets/vendors/highCharts/modules/no-data-to-display.js}"></script> <!-- 하이차트 lib -->
+<script th:src="@{/assets/vendors/highCharts/modules/exporting.js}"></script> <!-- 하이차트 lib -->
+<script th:src="@{/assets/vendors/highCharts/modules/solid-gauge.js}"></script> <!-- 하이차트 lib -->
+<script th:src="@{/assets/vendors/highCharts/plugin/pattern-fill-v2.js}"></script> <!-- 하이차트 lib -->
 <script type="text/javascript">
     /*<![CDATA[ */
 
