#11165 - 문서함, 개인 현황판 카드 색상바 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2763,6 +2763,7 @@ select {
 }
 .z-itsm-container .z-main-content .z-page-result .z-document-color {
   width: 0.75rem;
+  margin: 0.05rem;
 }
 .z-itsm-container .z-main-content .z-page-result .z-document-row {
   padding: 1.875rem 3rem;
