#11162 - 신청서메뉴 스크롤 위치변경 z-document-content -> z-page-content 로 위치 변경하였습니다.

--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -82,7 +82,7 @@
                     } else {
                         document.getElementById('documentList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        OverlayScrollbars(document.querySelector('.z-document-content'), {
+                        OverlayScrollbars(document.querySelector('.z-page-content'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function(e) {
