#11194 Class 메뉴 속성 추가 이름 수정 오류 작업

--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -327,6 +327,7 @@
         divRow.appendChild(inputElem);
         if (editable) {
             inputElem.readOnly = false;
+            inputElem.disabled = 'disabled';
             divRow.appendChild(deleteBtn);
         }
         if (editable) {
