--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -104,7 +104,7 @@
                 <span class="required"></span>
                 <div class="z-help-tooltip">
                     <span class="z-icon i-tooltip"></span>
-                    <div id="tooltipContent" class="z-tooltip-contents">
+                    <div id="tooltipContent" class="z-tooltip-contents right">
                         <span id="fixedDelayTooltip" th:utext="#{scheduler.tooltip.fixedDelay}"></span>
                         <span id="fixedRateTooltip" th:utext="#{scheduler.tooltip.fixedRate}"></span>
                         <span id="cronTooltip" th:utext="#{scheduler.tooltip.cron}"></span>
