--- a/src/main/resources/public/template/report/reportSearch.html
+++ b/src/main/resources/public/template/report/reportSearch.html
@@ -17,7 +17,7 @@
     <input type="hidden" sec:authorize="!hasAuthority('report.create') && !hasAuthority('report.update')"
            th:name="isRole" th:value="false"/>
     <form id="searchFrm">
-        <select id="searchTemplate" name="searchTemplate" class="col-3">
+        <select id="searchTemplate" name="searchTemplate" class="col-3 mr-2">
             <option value="" th:text="#{report.template.all}"></option>
             <option th:each="category: ${categoryList}" th:value="${category.templateId}" th:text="#{${category.reportName}}"></option>
         </select>
